--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "antd": "^3.23.6",
     "classnames": "^2.2.6",
     "dva": "^2.4.1",
+    "immutability-helper": "^3.0.1",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "omit.js": "^1.0.2",
