--- a/src/pages/Editor/Elements/config.json
+++ b/src/pages/Editor/Elements/config.json
@@ -1,8 +1,30 @@
 [
   {
+    "type": "Input",
+    "props": {
+      "placeholder": "输入文本"
+    }
+  },
+  {
     "type": "Button",
     "props": {
       "children": "按钮"
     }
+  },
+  {
+    "type": "Icon",
+    "props": {
+      "type": "smile"
+    }
+  },
+  {
+    "type": "span",
+    "props": {
+      "children": "文本"
+    }
+  },
+  {
+    "type": "div",
+    "children": []
   }
 ]
