--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,11 +23,12 @@ jobs:
         npm run build --if-present
       env:
         CI: true
-    - name: GitHub Pages Deploy
-      uses: crazy-max/ghaction-github-pages@v1
+    - name: Deploy to GitHub Pages
+      uses: JamesIves/github-pages-deploy-action@3.0.3
       with:
-        target_branch: gh-pages
-        build_dir: dist
-      env:
-        GITHUB_PAT: "75871bd5debde2afa92346e69dd1d8be9738e5d8"
+        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+        BASE_BRANCH: master # The branch the action should deploy from.
+        BRANCH: gh-pages # The branch the action should deploy to.
+        FOLDER: dist # The folder the action should deploy.
+
 
