--- a/package.json
+++ b/package.json
@@ -50,10 +50,12 @@
     "@ant-design/colors": "^3.1.0",
     "@ant-design/pro-layout": "^4.8.3",
     "@antv/data-set": "^0.10.2",
+    "@types/jszip": "^3.1.6",
     "antd": "^3.23.6",
     "classnames": "^2.2.6",
     "dva": "^2.4.1",
     "immutability-helper": "^3.0.1",
+    "jszip": "^3.2.2",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "omit.js": "^1.0.2",
