--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "react-dnd-html5-backend": "^9.5.1",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-json-view": "^1.19.1",
+    "react-split-pane": "^0.1.89",
     "redux": "^4.0.1",
     "slash2": "^2.0.0",
     "umi": "^2.12.6",
