--- a/src/pages/Test/Workflow/config.yaml
+++ b/src/pages/Test/Workflow/config.yaml
@@ -8,7 +8,6 @@
     - path: name
       type: input
     - path: manual.ipAddresses
-      label: ips
       type: list
       work:
       - path: ''
@@ -19,10 +18,7 @@
       type: input
     - path: tags
       type: multi-select
-      options:
-      - k8s-master
-      - k8s-worker|这是k8s-worker
-      - ceph
+      options: 'k8s-master|k8s-worker: 这是k8s-worker|ceph'
 - step: Storage
   work:
   - path: storage.ceph.$enable
@@ -33,18 +29,13 @@
     work:
     - path: cephHAMode
       type: radio-button
-      options:
-      - auto
-      - enable
-      - disable
+      options: auto|enable|disable
     - path: clusterNetwork
     - path: publicNetwork
   - path: storage.dynamicLPV.dynamicLPVPaths
   - path: storage.defaultStorgeClass
     type: radio-button
-    options:
-    - ceph
-    - dynamicLPV
+    options: ceph|dynamicLPV
     disabled: 'storage.ceph.$enable: (a) => !a'
     linkage:
     - condition: 'storage.ceph.$enable: (a) => !a'
@@ -65,9 +56,7 @@
   work:
   - path: kubernetes.k8sHAMode
     type: radio-button
-    options:
-    - enable
-    - disable
+    options: enable|disable
   - path: kubernetes.k8sWorkerNums
     type: number
     placeholder: '0'
@@ -92,9 +81,7 @@
   work:
   - path: pharos.metrics.pharosMetrics
     type: radio-button
-    options:
-    - enable
-    - disable
+    options: enable|disable
   - path: pharos.metrics.mongodbSize
     type: number
     placeholder: '100'
@@ -105,9 +92,7 @@
     show: 'pharos.metrics.pharosMetrics: "enable"'
   - path: pharos.log.pharosLog
     type: radio-button
-    options:
-    - enable
-    - disable
+    options: enable|disable
     disabled: 'pharos.metrics.pharosMetrics: "disable"'
     linkage:
     - condition: 'pharos.metrics.pharosMetrics: "disable"'
@@ -134,14 +119,10 @@
   work:
   - path: gpu.nvidiaDriverVersion
     type: radio-button
-    options:
-    - 384.183-1
-    - 410.129-1
+    options: '384.183-1|410.129-1'
   - path: gpu.virtualGPU
     type: radio-button
-    options:
-    - enable
-    - disable
+    options: enable|disable
     disabled: 'gpu.nvidiaDriverVersion: "384.183-1"'
     linkage:
     - condition: 'gpu.nvidiaDriverVersion: "384.183-1"'
@@ -154,32 +135,24 @@
   work:
   - path: diamond.diamondDNS
     type: radio-button
-    options:
-    - enable
-    - disable
+    options: enable|disable
   - path: diamond.upstreamDNS
     placeholder: 8.8.8.8
   - path: diamond.offlineDockerRegistry
     type: radio-button
-    options:
-    - enable
-    - disable
+    options: enable|disable
   - path: diamond.enableServices
     type: switch
   - path: diamond.diamondNTP
     type: radio-button
-    options:
-    - enable
-    - disable
+    options: enable|disable
   - path: diamond.upstreamNtpServer
     type: list
     work:
     - placeholder: upstreamNtpServer
   - path: diamond.authentication.installIAM
     type: radio-button
-    options:
-    - enable
-    - disable
+    options: enable|disable
   - path: diamond.authentication
     type: group
     show: 'diamond.authentication.installIAM: "enable"'
